assets/styles/src/style.css
/* ... */
	.theme .theme--section__research{
		margin-top: 0.6em;
	}
	.theme .theme--section__research ul li{
		margin-bottom: 0.35em;
	}
	.theme .theme--section__research ul li h3{
		display: inline;
	}
	.theme .theme--section__notes ul li h3,
	.news-items li h3{
		margin-bottom: 0.7em;
	}
		.theme--section__research a{
			transition: .3s ease-in;
		}
		@media (min-width: 721px){
		 .theme--section__research a:hover{
			 filter: blur(3px);
		 }
	 }

.theme[data-proportion="large"] .theme--section__description,
.about--pane[data-proportion="large"].about--content .wysiwyg{
	width: 66.66%;
}
	.theme[data-proportion="large"] .theme-item__work img{
		box-sizing: border-box;
		position: relative;
		left: 1.4em;
		width: calc(100% - 1.4em);
	}
	.theme[data-proportion="large"] .theme-item__work h2{
		position: absolute;
		bottom: -1.23em;
		transform: rotate(-90deg);
		transform-origin: top left;
	}

.theme[data-proportion="small"],
.theme[data-proportion="tiny"],
.about--pane[data-proportion="small"],
.about--pane[data-proportion="tiny"]{
	font-size: .6em;
}
.theme[data-proportion="small"] .theme--leader h1,
.theme[data-proportion="tiny"] .theme--leader h1{
	position: relative;
	top: .09rem;
}
	.theme[data-proportion="small"] .theme--section,
	.theme[data-proportion="small"] .theme-item__work{
		margin-bottom: 2em;
	}
	.theme[data-proportion="small"] .theme-item__hasimg .theme-item--hoverimg{
		padding: 0;
    width: calc(100% + 1.6rem);
    margin-left: -0.85em;
		top: 1.5rem;
		transform: translate( -50%, 0 );
	}

.theme[data-proportion="tiny"] .theme--leader{
	border-bottom: 1px solid #000000;
	padding-bottom: 0.15em;
	margin-bottom: 0.5em;
	padding-top: 2.65em;
}
.theme[data-proportion="tiny"].theme__networks .theme--leader{
	border-bottom-color: #FFFFFF;
}

.theme[data-proportion="tiny"] .theme--section{
	margin-bottom: 0;
}
.theme[data-proportion="tiny"] .theme-item{
	line-height: 1.35;
}
.theme[data-proportion="tiny"] .theme-item__work,
.theme[data-proportion="tiny"] .theme-item__work h2{
	margin-bottom: 0;
}

.theme[data-proportion="tiny"] .theme--section__description{
	display: none;
}
.theme[data-proportion="tiny"] .theme-item__work img{
	opacity: 0;
	pointer-events: none;
	height: 0;
	width: 0;
	filter: blur(3px);
	position: absolute;
	transition: filter .2s .15s ease-in, opacity .2s ease-in;
}
	.theme[data-proportion="tiny"] .theme-item__work:hover{
		filter: blur(0);
		z-index: 2;
	}

	.theme[data-proportion="tiny"] .theme-item__work:hover img{
		opacity: 1;
		filter: blur(0px);
		position: absolute;
		left: -1rem;
		max-width: none;
		width: calc(100% + 2.4rem);
		height: auto;
		top: 50%;
		transform: translateY(-50%);
	}
	.theme[data-proportion="tiny"] .theme--section__work > h2{
		display: none;
		margin-bottom: .4em;
		margin-top: -0.8em;
	}

	.theme[data-proportion="tiny"]  .theme--section__research ul li h3,
	.theme[data-proportion="tiny"] .theme-item__work h2,
	.theme[data-proportion="tiny"] .theme--section__research ul li a{
		display: block;
		white-space: nowrap;
		width: 100%;
		overflow: hidden;
		text-overflow: ellipsis;
	}
		.theme[data-proportion="tiny"] .dc-scrollbar{
			display: none;
		}
		.theme[data-proportion="tiny"]  .theme--section__notes ul li h3 .text{
			display: none;
		}
		.theme[data-proportion="tiny"]  .theme--section__research ul{
			padding-left: 1em;
		}
		.theme[data-proportion="tiny"] .theme--section__research ul li a h3{
			margin-bottom: 0;
		}
	.theme[data-proportion="tiny"]  .theme--section__notes ul li:before{
		position: static;
	}
	.theme[data-proportion="tiny"]  .theme--section__research ul li:before{
	  width: 1em;
	}
	.theme[data-proportion="tiny"] .theme-item__hasimg .theme-item--hoverimg{
		padding: 0;
		width: calc(100% + 3.2rem);
	}
		.theme[data-proportion="tiny"] .dc-hoverimg-trigger{
			position: static;
			width: 0.56em;
			margin: 0;
		}
		.about--pane[data-proportion="tiny"] .dc-hoverimg-trigger{
			position: static;
			width: .65em;
			margin: 0;
		}
			.theme[data-proportion="tiny"] .dc-hoverimg-trigger:after,
			.about--pane[data-proportion="tiny"] .dc-hoverimg-trigger:after{
				display: none;
			}
			.theme[data-proportion="small"] .dc-hoverimg-trigger,
			.about--pane[data-proportion="small"] .dc-hoverimg-trigger{
				margin-right: 0.65em;
				height: 0.6em;
			}
			.theme[data-proportion="small"] .dc-hoverimg-trigger:after,
			.about--pane[data-proportion="small"] .dc-hoverimg-trigger:after{
				font-size: .45em;
				letter-spacing: 0.025em;
				font-weight: bold;
				line-height: 1.4em;
				text-indent: 0px;
			}
			.theme[data-proportion="tiny"]  .theme--section__notes ul {
				width: calc(100% + 13px);
    		margin-left: -3px;
    		padding-left: 0;
			}
			.theme[data-proportion="tiny"]  .theme--section__notes ul li{
				display: block;
				width: 10px;
				height: 10px;
				position: relative;
				float: left;
				margin: 3px;
			}

			.theme[data-proportion="tiny"]  .theme--section__notes ul li:before{
				content: '';
				font-size: 1em;
				width: 8px;
				height: 8px;
				background: #000000;
				border-radius: 50%;
				position: absolute;
				left: 50%;
				top: 50%;
				transform: translateX(-50%) translateY(-50%);
				margin-left: 1px;
				margin-top: 1px;
			}
				.theme[data-proportion="tiny"].theme__networks .theme--section__notes ul li:before{
					background: #FFFFFF;
				}

			.theme[data-proportion="tiny"]  .theme--section__research ul li{
				position: relative;
				margin-bottom: 0;
			}
			.theme[data-proportion="tiny"] .theme-item__hasimg h3{
				margin: 0;
			}

	.theme[data-proportion="tiny"] .theme--leader h1{
		text-align: left;
	}
	.theme[data-proportion="tiny"] .theme--leader .editable+.original{
		display: block;
	}
		.theme[data-proportion="tiny"] .theme--leader .editable{
			display: none;
		}
/* about */
.about-wrapper{
	overflow-y: scroll;
	height: 100%;
	box-sizing: border-box;
}
/* ... */

